Release 16.07.2024
* DataSphere: added prices for node disks.
* Managed Service for ClickHouse: added instructions on creating and deleting multiple hosts at once.
* Translations updated.
* Fixes and improvements.